Dissolve Crash Due to AutoSmooth #41149

Closed
opened 2014-07-22 21:14:17 +02:00 by Jasper Labuschagne · 15 comments

System Information
Windows 7 Ultimate, Geforce 460

Blender Version
Broken: (2.71)
Worked: (none other tested, autosmooth is fairly recent as far as I know)

Crashes upon dissolvnig

Exact steps for others to reproduce the error
Dissolve stray/loose verts on edge with autosmooth

**System Information** Windows 7 Ultimate, Geforce 460 **Blender Version** Broken: (2.71) Worked: (none other tested, autosmooth is fairly recent as far as I know) **Crashes upon dissolvnig** **Exact steps for others to reproduce the error** Dissolve stray/loose verts on edge with autosmooth

Changed status to: 'Open'

Changed status to: 'Open'
Jasper Labuschagne self-assigned this 2014-07-22 21:14:17 +02:00

Added subscriber: @Zrahurgh

Added subscriber: @Zrahurgh

#41154 was marked as duplicate of this issue

#41154 was marked as duplicate of this issue
Jasper Labuschagne was unassigned by Sergey Sharybin 2014-07-22 22:05:56 +02:00
Bastien Montagne was assigned by Sergey Sharybin 2014-07-22 22:05:56 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29, guess it's more up to you?

@mont29, guess it's more up to you?

@Zrahurgh, and on the other hand it'll really help having .blend file which demonstrates the issue.

@Zrahurgh, and on the other hand it'll really help having .blend file which demonstrates the issue.

Apologies, .blend uploaded.

Apologies, .blend uploaded.

No need to create a new task for that…
DissolveCrash.blend

No need to create a new task for that… [DissolveCrash.blend](https://archive.blender.org/developer/F99185/DissolveCrash.blend)

◀ Merged tasks: #41154.

◀ Merged tasks: #41154.

Sorry first time round this part.

Sorry first time round this part.

When using F6, and ticking dissolve verts when removing an edge, it won't crash.

When using F6, and ticking dissolve verts when removing an edge, it won't crash.

Oh and in the subtask, I stated that it worked fine in version 2.70.1.

Oh and in the subtask, I stated that it worked fine in version 2.70.1.

This issue was referenced by f5cee25a12

This issue was referenced by f5cee25a1229420c6e5df4aee63a191f8268f6a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f5cee25a12.

Closed by commit f5cee25a12.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41149
No description provided.